--- a/05/Cargo.toml
+++ b/05/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+linya = "0.3.0"
+rayon = "1.8.0"
